Added url to repo in footer of index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             </div>
         </main>
         <footer class="page-footer">
-            <a href="http://" target="_blank" rel="noopener noreferrer">Git Repository</a>
+            <a href="https://github.com/chrisnajman/blackjack" target="_blank" rel="noopener noreferrer">Git
+                Repository</a>
         </footer>
     </div>
 
